

[package]
name = "bevy_vello"
description = "Render assets and scenes in Bevy with Vello"
authors = [
  "Sebastian Hamel <sebjfk@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
keywords = ["gamedev", "graphics"]
version = "0.10.3"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/linebender/bevy_vello"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
  "bevy_asset",
  "bevy_window",
  "bevy_core_pipeline",
  "bevy_render",
  "tonemapping_luts",
] }
# Ensure this version stays up to date with the README
vello = "0.5.0"
thiserror = "2.0.11"
vello_svg = { version = "0.7.1", optional = true }
velato = { version = "0.6.0", optional = true }
tracing = "0.1.41"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parley = { version = "0.4.0", optional = true, features = ["system"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parley = { version = "0.4.0", optional = true, default-features = false, features = [
  "std",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = []
svg = ["vello_svg"]
lottie = ["velato"]
text = ["parley"]
default_font = ["bevy/default_font", "text"]
